--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
         "typescript": "^4.7.4",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0"
+    },
+    "dependencies": {
+        "@reside-ic/random": "^0.0.3"
     }
 }
